@@ -4,7 +4,10 @@ This file tracks the changes to Wing over time. Especially
 with respect to new features and compatibility changes.
 ==========================================================
 
-2015-09-05
+2015-10-20
+ * Added qualifiers option to generate_relationships() in Wing::Rest.
+
+2015-10-05
  * Added a line to bin/dataapps.sh to make Wing compatible with Mac OS X El Capitan.
 
 2015-08-25
